[gd_scene load_steps=7 format=3 uid="uid://my0idvbaonr2"]

[ext_resource type="PackedScene" uid="uid://cob1bii058rtr" path="res://raw/window-1.blend" id="1_v4125"]
[ext_resource type="Script" path="res://scripts/window.gd" id="2_lvtji"]
[ext_resource type="Material" uid="uid://be5ri0dpgxnf4" path="res://materials/glass.tres" id="2_sajpc"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_o7j2g"]
points = PackedVector3Array(-1.89215, -3.21162, -0.0236396, -1.89215, -3.21162, 0.023635, -1.89215, 3.21162, -0.0236396, 1.89215, -3.21162, -0.0236396, 1.89215, -3.21162, 0.023635, -1.89215, 3.21162, 0.0236396, 1.89215, 3.21162, -0.0236396, 1.89215, 3.21162, 0.0236396)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tpewt"]
emission_shape = 3
emission_box_extents = Vector3(1, 2, 1)
direction = Vector3(0, 1, 1)
spread = 90.82
initial_velocity_min = 5.0
initial_velocity_max = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_uqvw7"]
size = Vector3(1, 1, 0.1)

[node name="window-1" instance=ExtResource("1_v4125")]
script = ExtResource("2_lvtji")

[node name="window" parent="." index="1"]
surface_material_override/0 = ExtResource("2_sajpc")

[node name="window-broken" parent="." index="2"]
visible = false
surface_material_override/0 = ExtResource("2_sajpc")

[node name="window_area" type="Area3D" parent="." index="3"]

[node name="shape" type="CollisionShape3D" parent="window_area" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33043, 0.00803711)
shape = SubResource("ConvexPolygonShape3D_o7j2g")

[node name="shatter" type="GPUParticles3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.67884, 0)
material_override = ExtResource("2_sajpc")
emitting = false
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.21
process_material = SubResource("ParticleProcessMaterial_tpewt")
draw_pass_1 = SubResource("BoxMesh_uqvw7")

[connection signal="area_entered" from="window_area" to="." method="_on_window_area_area_entered"]
[connection signal="body_entered" from="window_area" to="." method="_on_window_area_body_entered"]
